Test Nip's Branche

--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -21,10 +21,10 @@
         <div class="block-text">
             <h1>Faites découper des pièces de métal sur mesure !</h1>
             <section class="buttons">
-                <a href="{{ path('app_connexion') }}"><button class="button connexion">CONNEXION</button></a>
-                <a href="{{ path('app_choix') }}"><button class="button create">CRÉER UN COMPTE</button></a>
-                <a href="#"><button class="button config">CONFIGURATEUR</button></a>
-                <a href="#"><button class="button admin">ADMINISTRATEUR</button></a>
+                <a href="{{ path('app_connexion') }}"><button class="button connexion">CONNEXION Test</button></a>
+                <a href="{{ path('app_choix') }}"><button class="button create">CRÉER UN COMPTE Test</button></a>
+                <a href="#"><button class="button config">CONFIGURATEUR Test</button></a>
+                <a href="#"><button class="button admin">ADMINISTRATEUR Test</button></a>
             </section>
         </div>
 
