--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -8,8 +8,9 @@
         <!-- Icône supplémentaire -->
         <nav id="main-nav">
             <ul>
-                <li><a href="#">Accueil</a></li>
+                <li><a href="{{ path('app_index') }}">Accueil</a>
                 <li><a href="#">Produits</a></li>
+                <a href="{{ path('app_connexion') }}"><button class="button connexion">CONNEXION</button></a>
                 <li><a href="#">Contact</a></li>
                 <li><a href="#">Configuration</a></li>
             </ul>
