produits page pictures insert

--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -9,8 +9,7 @@
         <nav id="main-nav">
             <ul>
                 <li><a href="{{ path('app_index') }}">Accueil</a>
-                <li><a href="#">Produits</a></li>
-                <a href="{{ path('app_connexion') }}"><button class="button connexion">CONNEXION</button></a>
+                <li><a href="{{ path('app_produits') }}">Produits</a></li>
                 <li><a href="#">Contact</a></li>
                 <li><a href="#">Configuration</a></li>
             </ul>
