Test Nip's Branche (#1)
* Test Nip's Branche

* creation routes button accueil

* routes added

* produits page pictures insert

* remove configuration from navbar

--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -8,10 +8,9 @@
         <!-- Icône supplémentaire -->
         <nav id="main-nav">
             <ul>
-                <li><a href="#">Accueil</a></li>
-                <li><a href="#">Produits</a></li>
+                <li><a href="{{ path('app_index') }}">Accueil</a>
+                <li><a href="{{ path('app_produits') }}">Produits</a></li>
                 <li><a href="#">Contact</a></li>
-                <li><a href="#">Configuration</a></li>
             </ul>
         </nav>
         <div class="icon-container" id="icon-container">
