--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,21 +19,36 @@
 
 {% include 'menu.html.twig' %}
     <div class="container-block">
+        <div class="overlay blue-overlay"></div>
+        <div class="overlay red-overlay"></div>
+        <button class="show-button" onclick="showContent()">Afficher le contenu</button>
+        <div class="bonjour-container">
+            <span class="bonjour-letter">C</span>
+            <span class="bonjour-letter">O</span>
+            <span class="bonjour-letter">U</span>
+            <span class="bonjour-letter">P</span>
+            <span class="bonjour-letter">E</span>
+            <span class="bonjour-letter">'</span>
+            <span class="bonjour-letter">A</span>
+            <span class="bonjour-letter">C</span>
+            <span class="bonjour-letter">I</span>
+            <span class="bonjour-letter">E</span>
+            <span class="bonjour-letter">R</span>
+        </div>
         <div class="block-text">
             <h1>Faites découper des pièces de métal sur mesure !</h1>
             <section class="buttons">
                 <a href="{{ path('app_connexion') }}"><button class="button connexion">CONNEXION</button></a>
                 <a href="{{ path('app_choix') }}"><button class="button create">CRÉER UN COMPTE</button></a>
-                <a href="#"><button class="button config">CONFIGURATEUR</button></a>
-                <a href="#"><button class="button admin">ADMINISTRATEUR</button></a>
+                <a href="config.html"><button class="button config">CONFIGURATEUR</button></a>
+                <a href="{{ path('app_super_admin') }}"><button class="button admin">ADMINISTRATEUR</button></a>
             </section>
         </div>
 
         <section class="buttons-responsive">
-            <a href="#"><button class="button connexion">CONNEXION</button></a>
-            <a href="#"><button class="button create">CRÉER UN COMPTE</button></a>
-
-            <a href="#"><button class="button config">CONFIGURATEUR</button></a>
+            <a href="{{ path('app_connexion') }}"><button class="button connexion">CONNEXION</button></a>
+            <a href="{{ path('app_choix') }}"><button class="button create">CRÉER UN COMPTE</button></a>
+            <a href="config.html"><button class="button config">CONFIGURATEUR</button></a>
         </section>
 
         <div class="content">
